# volkszaehler.org

./: .dockerignore  .editorconfig  .gitignore  .gitmodules  .htaccess  .php_cs  .phpstan.neon  .travis.yml  CHANGELOG  Dockerfile  INSTALL  README  README.md  composer.json  docker-compose.yml  gulpfile.js  index.php  init.php  migrations.yaml  package.json  phpunit.xml  phpunit.xml.dist  tmpl.Dockerfile  volkszaehler.conf.php.default
.github/: dependabot.yml
.github/workflows/: build.yml  docker.yml
backend/: .gitignore  .htaccess  index.php  init.php  volkszaehler.conf.default.php  volkszaehler.conf.template.php
backend/lib/: DataAggregationIterator.php  DataIterator.php  Dispatcher.php  Router.php
content/: backend.php  index.html
content/javascript/: smartmeter.js
controller/: README  index.html  script.js
controller/bash/: log_onewire.sh
controller/current_cost/: README  crontab.example  doall.sh  fetchdata.pl
controller/php/: channel.php  channels.csv
etc/: README  config.dist.yaml  dbcopy.dist.yaml  dbcopy.json  middleware.json  ppm.json  services.xml  volkszaehler.conf  volkszaehler.conf.template.php
frontend/: index.html  style.css
frontend/javascript/: functions.js  jquery-extensions.js  script.js  smartmeter.js
frontend/javascripts/: backend.js  entity.js  frontend.js  functions.js  helper.js  init.js  jquery-extensions.js  json2.js  options.js  property.js  script.js  uuid.js
frontend/stylesheets/: jquery.ui.custom.css  style.css
htdocs/: .htaccess  backend.php  index.html  index.php  middleware.php  query.php  uuid_anlegen.php
htdocs/css/: jquery-treeTable.css  print.css  sprites.css  style.css
htdocs/frontend/: index.html
htdocs/ico/: manifest.json
htdocs/js/: cursor_popup.js  dialog.js  entities.js  entity.js  functions.js  init.js  middleware.js  options.js  plot.js  touchevents.js  wui.js  wui_design.js
lib/: Router.php  bootstrap.php  databaseobject.php  group.php
lib/Controller/: AggregatorController.php  AuthorizationController.php  CapabilitiesController.php  ChannelController.php  Controller.php  DataController.php  EntityController.php  IotController.php  PrognosisController.php  (+1 more)
misc/controller/vzlogger/: .gitignore  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  config.h  config.h.in  config.status  configure  configure.ac  vzlogger.conf
misc/controller/vzlogger/debian/: changelog  control  files  substvars  vzlogger.1  vzlogger.init  vzlogger.manpages  vzlogger.postinst.debhelper  vzlogger.postrm.debhelper  vzlogger.prerm.debhelper  vzlogger.substvars
misc/controller/vzlogger/debian/vzlogger/DEBIAN/: conffiles  control  md5sums  postinst  postrm  prerm
misc/controller/vzlogger/debian/vzlogger/etc/: vzlogger.conf
misc/controller/vzlogger/debian/vzlogger/usr/share/doc/vzlogger/: copyright
misc/controller/vzlogger/docs/: Makefile.am  Makefile.in  vzlogger.1
misc/controller/vzlogger/etc/: vzlogger.conf
misc/controller/vzlogger/src/: Makefile  Makefile.am  Makefile.in  api.c  api.h  ehz.c  ehz.h  local.c  local.h  ltqnorm.c  main.c  main.h  protocol.h  queue.c  queue.h  sml.h
misc/controller/vzlogger/src/.deps/: 1wire.Po  api.Po  local.Po  ltqnorm.Po  main.Po  obis.Po  queue.Po  random.Po  rawS0.Po
misc/controller/vzlogger/src/protocols/: 1wire.c  1wire.h  obis.c  obis.h  random.c  random.h  rawS0.c  rawS0.h  sml.c  sml.h
share/: entities.json  properties.json
test/: .htaccess  AccumulatorTest.php  AggregationPerformanceTest.php  AggregationTest.php  AggregationTrait.php  AuthorizationTest 2.php  AuthorizationTest.php  CapabilitiesTest.php  ChannelTest.php  ConsumptionTest.php  CounterTest.php  Data.php  DataBaseFunctions.php  DataContext.php  DataCounterTest.php  DataMeterTest.php  DataPerformance.php  DataSensorTest.php  EntityTest.php  FirewallTest.php  FormatTest.php  GroupTest.php  ImpulseTest.php  InterpreterProxyTest.php  InterpreterTrait.php  IotTest.php  JSONDataProtocolTest.php  MeterTest.php  Middleware.php  MiddlewareTest.php  PrognosisTest.php  ProtocolTest.php  PushServerTest.php  QueryTest.php  README.md  RawTest.php  SensorTest.php  SetupPerformanceData.php  VirtualTest.php  phpunit.xml  (+1 more)
(+505 files in other folders)
